move clear cache up and remove duplicate "my profile" also fix z-index in content

--- a/static/ganetimgr/css/theme.css
+++ b/static/ganetimgr/css/theme.css
@@ -211,6 +211,7 @@ hr {
   padding-bottom: 20px;
   border-left: 1px solid #cfcfd6;
   border-bottom: 1px solid #cfcfd6;
+  z-index: 10;
 }
 .content .actionbar.btn-toolbar {
   font-size: 1em;
